# YABS

./: .bazelrc  README.md  WORKSPACE.bazel
projects/calculator/: BUILD.bazel  calculator.py  calculator_test.py
projects/my-python-app/: BUILD.bazel
projects/pythonProject/: BUILD.bazel
projects/python_calculator/: BUILD.bazel  calculator_test.py
projects/python_web/: BUILD.bazel  python_web.py
